# NestingCenterSVGCreator

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
nestingcenter_svg/: __init__.py  svg_creator.py
