[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestingcenter-svg"
dynamic = ["version"]
description = "A Python library for converting Nesting Center data to SVG format"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Martin Cronje", email = "martin.cronje.home@gmail.com"},
]
keywords = ["svg", "nesting", "cad", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "geomdl>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/martincrx/nestingcenter-svg"
Repository = "https://github.com/martincrx/nestingcenter-svg"
Issues = "https://github.com/martincrx/nestingcenter-svg/issues"
